Updated empty state, prevent overlap of checkmark

--- a/public/styles.less
+++ b/public/styles.less
@@ -244,7 +244,7 @@ header {
 		opacity: 0;
 		a {
 			display: block;
-			padding: @pad @pad*4 @pad @pad*2;
+			padding: @pad @pad*6 @pad @pad*2;
 			color: @almostblack;
 			border-bottom: 1px solid @bordercolor;
 			html.darkmode & {
